Updated issues on doc
