# storage/api-docs/api-docs.json
@@ -2,6 +2,10 @@
     "openapi": "3.0.0",
     "info": {
         "title": "Swagger with Laravel APIs",
+        "description": "Sample APIs for praticepractice mock. | Postman - https://documenter.getpostman.com/view/2666389/2sA2r6YQVS",
+        "contact": {
+            "email": "yhvreddydev@gmail.com"
+        },
         "version": "1.0.0"
     },
     "paths": {
@@ -214,13 +218,13 @@
                 }
             }
         },
-        "/api/auth/login": {
+        "/api/v1/auth/login": {
             "post": {
                 "tags": [
                     "Auth"
                 ],
                 "summary": "Authenticate user and generate token",
-                "operationId": "88066443cc1a490fa39e40b6cafd5ff9",
+                "operationId": "c176298c4d97aeca15babe5cc6399df1",
                 "parameters": [
                     {
                         "name": "email",
@@ -243,7 +247,10 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Login successful"
+                        "description": "Login successful",
+                        "content": {
+                            "application/json": {}
+                        }
                     },
                     "401": {
                         "description": "Invalid credentials"
